# IDXTerminal

./: .gitignore  README.md  index.html  package-lock.json  package.json  portfolio_data.json  screener-refactor-plan.md  screenertableredesign.md  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: main.py  requirements.txt
backend/core/: container.py
backend/db/: database.py
backend/models/: __init__.py  alert.py  portfolio.py  user.py
backend/routers/: alerts.py  auth.py  export.py  market.py  portfolio.py
backend/scripts/: migrate_json.py
backend/services/: alert_checker.py  alert_service.py  auth_service.py  data_fetcher.py  order_checker.py  portfolio_service.py  ticker_registry.py  ws_broadcaster.py
backend/tests/: test_portfolio_service.py  test_ws_msgpack.py
backend/tests/services/: test_portfolio_service.py
conductor/: reorganization-plan.md  screener-refactor-plan.md
docs/: PROJECT_STRUCTURE.md  REORGANIZATION_GUIDE.md
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: IDXTerminal.d.ts  IDXTerminal.jsx  LWChart.tsx  OrderTriggeredDialog.tsx  SearchBar.tsx  TradeConfirmDialog.tsx
src/components/IDXTerminal/: IDXTerminal.css  IDXTerminal.jsx  index.ts
src/components/alerts/: AlertsPanel.tsx
src/hooks/: useChartWebSocket.ts  useIndicators.ts
src/shared/ui/: SearchBar.tsx  (+2 more)
src/stores/: alerts.ts  auth.ts  market.ts  portfolio.ts  useAuthStore.ts  useChartStore.ts  useMarketStore.ts  usePortfolioStore.ts  useScreenerStore.ts
src/types/: index.ts
(+83 files in other folders)
